[BugzId:282] Centered table alignment of points for each event.

--- a/static/css/f3.css
+++ b/static/css/f3.css
@@ -1020,3 +1020,5 @@ th.flowHead{
 	padding: 0.5em;
 	background-color: pink;
 }
+td.event-points {
+	text-align: center;
